tests/NormalTests/paczka1/small_fuzzy/15051782.err
Error in line 3: pTHC7j1E A570 44,9
Error in line 8: pTHC7j1E S853 58,5
Error in line 11: ex3v A377 40,1
